--- a/index.html
+++ b/index.html
@@ -79,14 +79,17 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper on UAV tracking and detection accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-08:</font> TOTB has been released, go check it out <a href="https://hengfan2010.github.io/projects/TOTB/"><font><font color="#0099ff"> here</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on transparent object tracking accepted to <a href="http://iccv2021.thecvf.com/home"><font><font color="#0099ff"> ICCV 2021</font></font></a>.</li>
+		<!--
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> I will serve as an Area Chair for <a href="http://wacv2022.thecvf.com/home"><font><font color="#0099ff"> WACV 2022</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on visual object tracking accepted to <a href="https://www.iros2021.org/"><font><font color="#0099ff"> IROS 2021</font></font></a>.</li>
-		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my PhD dissertation. So much gratitude for everyone I met along this journey.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-05:</font> I passed my PhD dissertation. So much gratitude for everyone I met along this journey.</li> 
+		-->
     </ul>
+	
 	
 	<HR>
 	
-	<font size="4" color="#034f84"><b>Quick links</b></font> <font size="3"> 
+	<font size="4" color="#034f84"><b>Quick Links</b></font> <font size="3"> 
 		<br>
 		&nbsp; &nbsp; &nbsp;
 		<a href="https://my.unt.edu/psp/ps/?cmd=login" target="_blank"><font color="#0099ff" style="line-height: 150%;">myUNT</font></a> &nbsp;   
