--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,27 @@
 	<br>
 	<br>
 	
+	<font size="4" color="#034f84"><b>Pre-prints</b></font>
+	<br>
+	
+	<ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Learning Target-aware Representation for Visual Tracking via Informative Interactions</font>
+				<br>
+				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
+				<br>
+				<font>arXiv:2201.02526.</font>
+				<br>
+				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> 
+				<br>
+			</p>
+		</li>
+		
+    </ul>
+	
+	
 	<font size="4" color="#034f84"><b>Journal Papers</b></font>
 	<br>
 	
@@ -40,7 +61,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
 				<br>
-				<font color="#000000" >Pengfei Zhu, Longyin Wen, Dawei Du, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
+				<font color="#000000" >P. Zhu, L. Wen, D. Du, X. Bian, H. Fan, Q. Hu, and H. Ling</font>
 				<br>
 				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), accepted, in press.</font>
 				<br>
@@ -53,7 +74,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">GL-GAN: Adaptive Global and Local Bilevel Optimization for Generative Adversarial Network</font>
 				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang</font>
+				<font color="#000000" >Y. Liu, H. Fan, X. Yuan, and J. Xiang</font>
 				<br>
 				<font>Pattern Recognition (<b>PR</b>), 123: 108375, 2022.</font>
 				<br>
@@ -66,7 +87,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Large-scale Single Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Hexin Bai, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Harshit, Mingzhen Huang, Juehuan Liu, Yong Xu, Chunyuan Liao, Lin Yuan, and Haibin Ling</font>
+				<font color="#000000" >H. Fan, H. Bai, L. Lin, F. Yang, P. Chu, G. Deng, S. Yu, Harshit, M. Huang, J. Liu, Y. Xu, C. Liao, L. Yuan, and H. Ling</font>
 				<br>
 				<font>International Journal of Computer Vision (<b>IJCV</b>), 129: 439–461, 2021.</font>
 				<br>
@@ -79,7 +100,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">ClsGAN: Selective Attribute Editing Based On Classification Adversarial Network</font>
 				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Fuchuan Ni, and Jinhai Xiang</font>
+				<font color="#000000" >Y. Liu, H. Fan, F. Ni, and J. Xiang</font>
 				<br>
 				<font>Neural Networks (<b>NN</b>), 133: 220-228, 2021.</font>
 				<br>
@@ -92,7 +113,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Robust and Efficient Graph Correspondence Transfer for Person Re-identification</font>
 				<br>
-				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, Shuang Wu, and Haibin Ling</font>
+				<font color="#000000" >Q. Zhou, H. Fan, H. Yang, H. Su, S. Zheng, S. Wu, and H. Ling</font>
 				<br>
 				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 30: 1623-1638, 2021.</font>
 				<br>
@@ -120,7 +141,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Weighted Bilinear Coding Over Salient Body Parts for Person Re-identification</font>
 				<br>
-				<font color="#000000" >Zhigang Chang, Qin Zhou, <b>Heng Fan</b>, Hua Yang, Hang Su, Shibao Zheng, and Haibin Ling</font>
+				<font color="#000000" >Z. Chang, Q. Zhou, H. Fan, H. Yang, H. Su, S. Zheng, and H. Ling</font>
 				<br>
 				<font>Neurocomputing, 407: 454-464, 2020.</font>
 				<br>
@@ -134,7 +155,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Parallel Tracking and Verifying</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000" >H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE Transactions on Image Processing (<b>T-IP</b>), 28(8): 4130-4144, 2019.</font>
 				<br>
@@ -147,7 +168,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Multi-level Contextual RNNs with Attention Model for Scene Labeling</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Xue Mei, Danil Prokhorov, and Haibin Ling</font>
+				<font color="#000000" >H. Fan, X. Mei, D. Prokhorov, and H. Ling</font>
 				<br>
 				<font>IEEE Transactions on Intelligent Transportation Systems (<b>T-ITS</b>), 19(11): 3475-3485, 2018.</font>
 				<br>
@@ -160,7 +181,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Robust Visual Tracking with Multitask Joint Dictionary Learning</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
+				<font color="#000000" >H. Fan and J. Xiang</font>
 				<br>
 				<font>IEEE Transactions on Circuits and Systems for Video and Technology (<b>T-CSVT</b>), 27(5): 1018-1030, 2017.</font>
 				<br>
@@ -222,7 +243,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Transparent Object Tracking Benchmark</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b>, Halady Akhilesha Miththanthaya, Harshit, Siranjiv Ramana Rajan, Xiaoqiong Liu, Zhilin Zou, Yuewei Lin, and Haibin Ling</font>
+				<font color="#000000">H. Fan, H. Miththanthaya, Harshit, S. Rajan, X. Liu, Z. Zou, Y. Lin, and H. Ling</font>
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021.</font>
 				<br>
@@ -235,7 +256,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">CRACT: Cascaded Regression-Align-Classification for Robust Visual Tracking</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000">H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2021.</font>
 				<br>
@@ -248,7 +269,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">TracKlinic: Diagnosis of Challenge Factors in Visual Tracking</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b>, Fan Yang, Peng Chu, Yuewei Lin, Lin Yuan, and Haibin Ling</font>
+				<font color="#000000">H. Fan, F. Yang, P. Chu, Y. Lin, L. Yuan, and H. Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
@@ -261,7 +282,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">MART: Motion-Aware Recurrent Neural Network for Robust Visual Tracking</font>
 				<br>
-				<font color="#000000"><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000">H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021.</font>
 				<br>
@@ -275,7 +296,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Detection of Trabecular Landmarks for Osteoporosis Prescreening in Dental Panoramic Radiographs</font>
 				<br>
-				<font color="#000000">Jiaxiang Ren, <b>Heng Fan</b>, Jie Yang, and Haibin Ling</font>
+				<font color="#000000">J. Ren, H. Fan, J. Yang, and H. Ling</font>
 				<br>
 				<font>IEEE Engineering in Medicine and Biology Society  (<b>EMBC</b>), 2020.</font>
 				<br>
@@ -290,7 +311,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Clustered Object Detection in Aerial Images</font>
 				<br>
-				<font color="#000000" >Fan Yang, <b>Heng Fan</b>, Peng Chu, Erik Blasch, and Haibin Ling</font>
+				<font color="#000000" >F. Yang, H. Fan, P. Chu, E. Blasch, and H. Ling</font>
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019.</font>
 				<br>
@@ -303,7 +324,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Siamese Cascaded Region Proposal Networks for Real-Time Visual Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000" >H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
 				<br>
@@ -316,7 +337,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">LaSOT: A High-quality Benchmark for Large-scale Single Object Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Liting Lin, Fan Yang, Peng Chu, Ge Deng, Sijia Yu, Hexin Bai, Yong Xu, Chunyuan Liao, and Haibin Ling</font>
+				<font color="#000000" >H. Fan, L. Lin, F. Yang, P. Chu, G. Deng, S. Yu, H. Bai, Y. Xu, C. Liao, and H. Ling</font>
 				<br>
 				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019.</font>
 				<br>
@@ -329,7 +350,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Scene Parsing via Dense Recurrent Neural Networks with Attentional Selection</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Peng Chu, Longin Jan Latecki, and Haibin Ling</font>
+				<font color="#000000" >H. Fan, P. Chu, L. Latecki, and H. Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> 
 				<br>
@@ -342,7 +363,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Online Multi-Object Tracking with Instance-Aware Tracker and Dynamic Model Refreshment</font>
 				<br>
-				<font color="#000000" >Peng Chu, <b>Heng Fan</b>, Chiu C. Tan, and Haibin Ling</font>
+				<font color="#000000" >P. Chu, H. Fan, C. Tan, and H. Ling</font>
 				<br>
 				<font>IEEE Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2019.</font> 
 				<br>
@@ -383,7 +404,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Graph Correspondence Transfer for Person Re-identification</font>
 				<br>
-				<font color="#000000" >Qin Zhou, <b>Heng Fan</b>, Shibao Zheng, Hang Su, Xinzhe Li, Shuang Wu, and Haibin Ling</font>
+				<font color="#000000" >Q. Zhou, H. Fan, S. Zheng, H. Su, X. Li, S. Wu, and H. Ling</font>
 				<br>
 				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2018.</font> 
 				<br>
@@ -396,7 +417,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Parallel Tracking and Verifying: A Framework for Real-Time and High Accuracy Visual Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000" >H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2017.</font>
 				<br>
@@ -409,7 +430,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Robust Visual Tracking via Local-Global Correlation Filter</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Jinhai Xiang</font>
+				<font color="#000000">H. Fan and J. Xiang</font>
 				<br>
 				<font>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2017.</font> 
 				<br>
@@ -422,7 +443,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">SANet: Structure-Aware Network for Visual Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b> and Haibin Ling</font>
+				<font color="#000000" >H. Fan and H. Ling</font>
 				<br>
 				<font>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) Workshop, 2017.</font> 
 				<br>
@@ -449,7 +470,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Cross Datasets Vegetation Detection with Spatial Prior and Local Context</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b>, Xue Mei, Danil Prokhorov, and Haibin Ling</font>
+				<font color="#000000" >H. Fan, X. Mei, D. Prokhorov, and H. Ling</font>
 				<br>
 				<font>IEEE Intelligent Vehicles Symposium (<b>IV</b>), 2016.</font>
 				<br>
@@ -468,7 +489,7 @@
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Algorithms and Benchmarks for Robust Visual Object Tracking</font>
 				<br>
-				<font color="#000000" ><b>Heng Fan</b></font>
+				<font color="#000000" >H. Fan</font>
 				<br>
 				<font>Advisor: <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank"><font color="black">Prof. Haibin Ling</font></a></font>
 				<br>
