--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,7 +131,10 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
-			<font size="4"> <b>03/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 15, 2022</font>.</font>
+			<font size="4"> <b>03/21/2022:</b> The complete paper review lists are out; please submit your reviews on the indicated due date.</font>
+		</li>
+		<li>
+			<font size="4"> <b>03/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 22, 2022</font>.</font>
 		</li>
 		<li>
 			<font size="4"> <b>02/28/2022:</b> The paper review list 1 is out; due on <font color="#FF0000">Mar. 8, 2022</font>.</font>
@@ -165,7 +168,7 @@ course website regularly for updated reading materials.</font>
 	
 	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 1 for Week 7</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
+	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
 	<ol>
 		<li>
 			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
@@ -178,7 +181,7 @@ course website regularly for updated reading materials.</font>
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 2 for Week 8</b> (<font size="4" color="#FF0000">due on 3/15</font>):</font>
+	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 3/22</font>):</font>
 	<ol>
 		<li>
 			<font size="4" > K Simonyan and A Zisserman, Very Deep Convolutional Networks for Large-Scale Image Recognition, <i>ICLR</i>, 2015.</font>
@@ -188,6 +191,54 @@ course website regularly for updated reading materials.</font>
 , <i>CVPR</i>, 2016.</font>
 		</li>
 		
+	</ol>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 3</b> (<font size="4" color="#FF0000">due on 3/29</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > R. Girshick, J. Donahue, T. Darrell, and J. Malik, Rich feature hierarchies for accurate object detection and semantic segmentation, <i>CVPR</i>, 2014.</font>
+		</li>
+		<li>
+			<font size="4" > R. Girshick, Fast R-CNN, <i>ICCV</i>, 2015.</font>
+		</li>
+	</ol>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 4</b> (<font size="4" color="#FF0000">due on 4/5</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > S. Ren, K. He, R. Girshick, and J. Sun, Faster R-CNN: Towards real-time object detection with region proposal networks, <i>NIPS</i>, 2015.</font>
+		</li>
+		<li>
+			<font size="4" > J. Redmon, S. Divvala, R. Girshick, and A. Farhadi, You only look once: Unified, real-time object detection, <i>CVPR</i>, 2016.</font>
+		</li>
+	</ol>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 5</b> (<font size="4" color="#FF0000">due on 4/12</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > J. Chung, C. Gulcehre, K. Cho, and Y. Bengio, Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modelling, <i>NIPS Workshop</i>, 2014.</font>
+		</li>
+		<li>
+			<font size="4" > J. Donahue, L. Hendricks, S. Guadarrama, M. Rohrbach, S. Venugopalan, K. Saenko, and T. Darrell, Long-term recurrent convolutional networks for visual recognition and description, <i>CVPR</i>, 2015.</font>
+		</li>
+	</ol>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 6</b> (<font size="4" color="#FF0000">due on 4/19</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. Gomez, Ł. Kaiser, and I. Polosukhin, Attention is all you need, <i>NIPS</i>, 2017.</font>
+		</li>
+		<li>
+			<font size="4" > A. Dosovitskiy, L. Beyer, A. Kolesnikov, D. Weissenborn, X. Zhai, T. Unterthiner, M. Dehghani, M. Minderer, G. Heigold, S. Gelly, J. Uszkoreit, and N. Houlsby, An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale, <i>ICLR</i>, 2021.</font>
+		</li>
 	</ol>
 	</p>
 	
@@ -414,7 +465,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/15; </font> </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/22; </font> </font></td>
 		</tr>
 		
 		<tr>
@@ -430,6 +481,49 @@ course website regularly for updated reading materials.</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
 			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Assignment 1 is out, due on 3/25;</font> </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br>  </font></td>
+			<td width=500 style='width:480.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<font size="4" color="#FF0000"><b>Spring Break</b> (no classes)</font>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#FBEEE6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br>3/22 </font></td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> CNN Applications (cont.)</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 3 is out, due on 3/29;</font> </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/24 </font></td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Recurrent Neural Networks (RNNs)</b>
+					<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Basics and Architecture </font>
+					</li>
+					</ul>
+				
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 	</table>
