--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -526,6 +526,36 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 11</b> <br>3/29 </font></td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Basics and Architecture (cont.)</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 3 is due today;</font> </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br>3/31 </font></td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Applications</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
+			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+		</tr>
+		
 	</table>
 	</p>
 	
