--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -556,6 +556,43 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#F2D7D5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
 		</tr>
 		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br>4/5 </font></td>
+			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<b>Transformers</b>
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Background</font>
+						</li>
+						<li>
+							<font size="4"> Self- and Cross-attention</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Paper review list 4 is due today;</font> </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/7 </font></td>
+			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Self- and Cross-attention (cont.)</font>
+						</li>
+						<li>
+							<font size="4"> Applications beyong language</font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://proceedings.neurips.cc/paper/2013/file/9aa42b31882ec039965f3c4923ce901b-Paper.pdf" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://papers.nips.cc/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://aclanthology.org/N19-1423.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a>, <a href="https://jalammar.github.io/illustrated-transformer/" target="_blank"><font color="#0099ff">Ref 4</font></a> (a blog), <a href="https://openreview.net/pdf?id=YicbFdNTTy" target="_blank"><font color="#0099ff">Ref 5</font></a> </font></td>
+			<td width=200 style='width:180.0pt;background:#D4EFDF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+		</tr>
+		
 	</table>
 	</p>
 	
