--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -603,7 +603,7 @@ course website regularly for updated reading materials.</font>
 							<font size="4"> Graph Convolutional Networks</font>
 						</li>
 						<li>
-							<font size="4"> Unsupervised Learning</font>
+							<font size="4"> Self-supervised Learning</font>
 						</li>
 					</ul>
 			</font>
