--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -619,7 +619,9 @@ course website regularly for updated reading materials.</font>
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
 							<font size="4"> Reinforcement Learning</font>
-							<font size="4" color="#FF0000"> Review</font>
+						</li>
+						<li>
+							<font size="4" color="#FF0000"> Review for Final</font>
 						</li>
 					</ul>
 			</font>
