--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -642,7 +642,7 @@ course website regularly for updated reading materials.</font>
 							<font size="4"> Generative Adversarial Networks</font>
 						</li>
 						<li>
-							<font size="4"> Ethics in Deep Learning</font>
+							<font size="4"> Ethics in Deep Learning (optional)</font>
 						</li>
 					</ul>
 			</font>
