--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -666,7 +666,7 @@ course website regularly for updated reading materials.</font>
 			<td width=100  style='width:80.0pt;background:#EAEBF5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/12 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEBF5;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4" color="#FF0000"> 
-					<b>Final Exam</b>
+					<b>Final Exam</b> (10:30 am - 12:30 pm)
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#EAEBF5;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
