--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -609,11 +609,11 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://tkipf.github.io/graph-convolutional-networks/" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://openaccess.thecvf.com/content_iccv_2015/papers/Doersch_Unsupervised_Visual_Representation_ICCV_2015_paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a> </font></td>
-			<td width=200 style='width:180.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" >  -  </font></td>
+			<td width=200 style='width:180.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="#FF0000"> Assignment 2 is out, due on 5/3.  </font></td>
 		</tr>
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/14 </font></td>
+			<td width=100  style='width:80.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > 4/14 </font></td>
 			<td width=500 style='width:480.0pt;background:#F9E79F;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
