--- a/teaching/22S-5218_4930/course_project.htm
+++ b/teaching/22S-5218_4930/course_project.htm
@@ -77,7 +77,7 @@ div img:hover{
 			<font size="4"> Final report deadline: <font color="#FF0000">April 17, 2022</font></font>
 		</li>
 		<li>
-			<font size="4"> Presentation: <font color="#FF0000">TBD</font></font>
+			<font size="4"> Presentation: <font color="#FF0000">Check it <a href="presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.   </font></font>
 		</li>
 	</ul>
 	</p>
