--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,6 +131,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>04/18/2022:</b> The project presentation schedule is out. Check it <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.</font>
+		</li>
+		<li>
 			<font size="4"> <b>03/21/2022:</b> The complete paper review lists are out; please submit your reviews on the indicated due date.</font>
 		</li>
 		<li>
@@ -154,6 +157,9 @@ course website regularly for updated reading materials.</font>
 	<ul>
 		<li>
 			<font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">Course Project</font></a></font>
+		</li>
+		<li>
+			<font size="4"> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Course Project Presentation Schedule</font></a></font>
 		</li>
 	</ul>
 	
