--- a/teaching/22S-5218_4930/presentation_schedule.htm
+++ b/teaching/22S-5218_4930/presentation_schedule.htm
@@ -155,11 +155,9 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> American Sign Language Translation </font></td>
 		</tr>
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
-			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Caleb Yost, <br> Stephanie Brooks, <br> Anish Sah </font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Animal Classification Using Deep Learning </font></td>
+			<td width=100 style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
+			<td width=500  style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Xiaoqiong Liu </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> "Contradictory, My Dear Watson" - how two sentences are related</font></td>
 		</tr>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
@@ -189,9 +187,11 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Emojify i.e creating our own emoji using deep learning </font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Xiaoqiong Liu </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> "Contradictory, My Dear Watson" - how two sentences are related</font></td>
+			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
+			<td width=500 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Caleb Yost, <br> Stephanie Brooks, <br> Anish Sah </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Animal Classification Using Deep Learning </font></td>
 		</tr>
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
