--- a/teaching/22S-5218_4930/presentation_schedule.htm
+++ b/teaching/22S-5218_4930/presentation_schedule.htm
@@ -109,7 +109,7 @@ div img:hover{
 			
 			<br>
 			
-			<font size="4"> A6: That depends. Generally, for a 10 (or 11)-minutes presentation, 15 pages are appropriate for the slide. But it's up to you and your presentation content.</font>
+			<font size="4"> A6: That depends. Generally, for a 10-minutes presentation, 15 pages are appropriate for the slide. But it's up to you and your presentation content.</font>
 		</li>
 	</ul>
 	</p>
