--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-04:</font> Our work <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> is accepted to <a href="https://www.ijcai.org/" target="_blank"><font><font color="#0099ff"> IJCAI 2022</font></font></a> as Oral.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Check <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> on arXix, a simple, general and effective backbone for improving tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Welcome PhD student Xiaoqiong Liu to join our team.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-11:</font> We have one paper on image generation accepted to Pattern Recognition.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper on UAV tracking and detection accepted to PAMI.</li>
-		<li><font style="font-weight:bold; line-height: 120%">2021-08:</font> TOTB has been released, go check it out <a href="https://hengfan2010.github.io/projects/TOTB/"><font><font color="#0099ff"> here</font></font></a>.</li>
-		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on transparent object tracking accepted to <a href="http://iccv2021.thecvf.com/home"><font><font color="#0099ff"> ICCV 2021</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-08:</font> TOTB has been released, go check it out <a href="https://hengfan2010.github.io/projects/TOTB/" target="_blank"><font><font color="#0099ff"> here</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on transparent object tracking accepted to <a href="http://iccv2021.thecvf.com/home" target="_blank"><font><font color="#0099ff"> ICCV 2021</font></font></a>.</li>
 		<!--
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> I will serve as an Area Chair for <a href="http://wacv2022.thecvf.com/home"><font><font color="#0099ff"> WACV 2022</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-07:</font> We have one paper on visual object tracking accepted to <a href="https://www.iros2021.org/"><font><font color="#0099ff"> IROS 2021</font></font></a>.</li>
