--- a/publications.html
+++ b/publications.html
@@ -238,6 +238,19 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Learning Target-aware Representation for Visual Tracking via Informative Interactions</font>
+				<br>
+				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
+				<br>
+				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (Long Oral)</font>
+				<br>
+				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<br>
+			</p>
+		</li>
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
