--- a/publications.html
+++ b/publications.html
@@ -38,13 +38,13 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Learning Target-aware Representation for Visual Tracking via Informative Interactions</font>
+				<font style="font-weight:bold">SwinTrack: A Simple and Strong Baseline for Transformer Tracking</font>
 				<br>
-				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
+				<font color="#000000" >L. Lin, H. Fan, Y. Xu, and H. Ling</font>
 				<br>
-				<font>arXiv:2201.02526.</font>
+				<font>arXiv:2112.00995.</font>
 				<br>
-				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> 
+				<a href="https://arxiv.org/pdf/2112.00995.pdf?ref=https://githubhelp.com" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/LitingLin/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
@@ -245,7 +245,7 @@
 				<br>
 				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
 				<br>
-				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (Long Oral)</font>
+				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Oral</b>)</font>
 				<br>
 				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
 				<br>
