--- a/publications.html
+++ b/publications.html
@@ -245,7 +245,7 @@
 				<br>
 				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
 				<br>
-				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Oral</b>)</font>
+				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Long Oral</b>)</font>
 				<br>
 				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
 				<br>
