--- a/publications.html
+++ b/publications.html
@@ -247,7 +247,7 @@
 				<br>
 				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Long Oral</b>)</font>
 				<br>
-				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
