--- a/teaching/22S-5218_4930/presentation_schedule.htm
+++ b/teaching/22S-5218_4930/presentation_schedule.htm
@@ -229,6 +229,11 @@ div img:hover{
 			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Mittalben Jay Bhatiya, <br>Sonali Margaret Rozario </font></td>
 			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Fake News Detection </font></td>
 		</tr>
+		<tr>
+			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
+			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Gokilavani Sagadevan, <br> Priyanka kare, <br>Pujah Balasubramaniam  </font></td>
+			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Automatic Text Generation  </font></td>
+		</tr>
 		
 		
 	</table>
