--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -248,6 +248,21 @@ course website regularly for updated reading materials.</font>
 	</ol>
 	</p>
 	
+	<p style="text-align:justify">
+	<font size="4" ><b>Additional paper review list for extra credits</b> (<font size="4" color="#FF0000">due on 5/5</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > Z. Liu, Y. Lin, Y. Cao, H. Hu, Y. Wei, Z. Zhang, S. Lin, and B. Guo, Hierarchical Vision Transformer using Shifted Windows, <i>ICCV</i>, 2021.</font>
+		</li>
+		<li>
+			<font size="4" > C. Finn, P. Abbeel, and S. Levine, Model-agnostic meta-learning for fast adaptation of deep networks, <i>ICML</i>, 2017.</font>
+		</li>
+		<li>
+			<font size="4" > S. Sabour, N. Frosst, and G. Hinton, Dynamic routing between capsules, <i>NIPS</i>, 2017.</font>
+		</li>
+	</ol>
+	</p>
+	
 	</br>
 	<HR>
 	
