--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,19 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">AnimalTrack: A Large-scale Benchmark for Multi-Animal Tracking in the Wild</font>
+				<br>
+				<font color="#000000" >L. Zhang, J. Gao, Z. Xiao, and H. Fan</font>
+				<br>
+				<font>	arXiv:2205.00158.</font>
+				<br>
+				<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">project (coming soon)</font></a>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -44,7 +57,7 @@
 				<br>
 				<font>arXiv:2112.00995.</font>
 				<br>
-				<a href="https://arxiv.org/pdf/2112.00995.pdf?ref=https://githubhelp.com" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/LitingLin/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/LitingLin/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
