--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Release AnimalTrack (<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) for multi-animal tracking. Stay tuned for updates.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-04:</font> Our work <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> (<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">pdf</font></a>, <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>) on tracking is accepted to <a href="https://www.ijcai.org/" target="_blank"><font><font color="#0099ff"> IJCAI 2022</font></font></a> as <b>Long Oral</b>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Check <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> on arXix, a simple, general and effective backbone for improving tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Welcome PhD student Xiaoqiong Liu to join our team.</li>
