--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a> in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as an Area Chair for WACV 2022.
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a> in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as Area Chairs for WACV 2022, WACV 2023.
     
 	<HR>
 	
@@ -74,6 +74,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Serve as an Area Chair for <a href="https://wacv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2023</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Release AnimalTrack (<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) for multi-animal tracking. Stay tuned for updates.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-04:</font> Our work <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> (<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">pdf</font></a>, <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>) on tracking is accepted to <a href="https://www.ijcai.org/" target="_blank"><font><font color="#0099ff"> IJCAI 2022</font></font></a> as <b>Long Oral</b>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Check <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> on arXix, a simple, general and effective backbone for improving tracking.</li>
