--- a/service.html
+++ b/service.html
@@ -34,6 +34,12 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2023
+				<br>
+			</p>
+		</li>
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022
 				<br>
 			</p>
