--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 				<br>
 				<font>arXiv:2112.00995.</font>
 				<br>
-				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/LitingLin/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="https://arxiv.org/pdf/2112.00995.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/SwinTrack" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
