--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 	-->
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3">I am looking for multiple self-motivated PhD students in 2022/2023 to work on challenging problems (e.g., <b>visual object tracking</b>, <b>video object detection/segmentation</b>) 
-	in computer vision. Please send me your CV and transcripts if you are interested. Motivated master and undergraduate students within UNT are also welcome.</font>
+	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
 	<HR>
 	
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-07:</font> Work on image inpainting is accepted to <a href="https://eccv2022.ecva.net/" target="_blank"><font><font color="#0099ff">ECCV 2022</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Serve as an Area Chair for <a href="https://wacv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2023</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-05:</font> Release AnimalTrack (<a href="https://arxiv.org/abs/2205.00158" target="_blank"><font><font color="#0099ff">arXiv</font></font></a>) for multi-animal tracking. Stay tuned for updates.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-04:</font> Our work <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> (<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">pdf</font></a>, <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>) on tracking is accepted to <a href="https://www.ijcai.org/" target="_blank"><font><font color="#0099ff"> IJCAI 2022</font></font></a> as <b>Long Oral</b>.</li>
