--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,19 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Divert More Attention to Vision-Language Tracking</font>
+				<br>
+				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, and L. Jing</font>
+				<br>
+				<font>	arXiv:2207.01076.</font>
+				<br>
+				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<br>
+			</p>
+		</li>
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
