--- a/group.html
+++ b/group.html
@@ -27,7 +27,7 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>PhD Students Supervised</b></font>
+	<font size="4" color="#034f84"><b>PhD Students</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
@@ -39,6 +39,19 @@
 				<font size="4" style="line-height: 120%;">MS, Stony Brook University; Hong Kong University of Science & Technology</font>
 				<br>
 				<font size="4" style="line-height: 120%;">BS, Shanghai Jiao Tong University</font>
+			</p>
+		</li>
+		
+    </ul>
+	
+	<font size="4" color="#034f84"><b>MS Students</b></font>
+	<br>
+	
+    <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font size="4" style="line-height: 120%;"><b>Thanh Le</b>, 2021-present</font>
 			</p>
 		</li>
 		
