--- a/publications.html
+++ b/publications.html
@@ -268,6 +268,19 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">High-Fidelity Image Inpainting with GAN Inversion</font>
+				<br>
+				<font color="#000000" >Y. Yu, L. Zhang, H. Fan, and T. Luo</font>
+				<br>
+				<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
+				<br>
+				<font color="#0099ff">more details will be coming ...</font> 
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">Learning Target-aware Representation for Visual Tracking via Informative Interactions</font>
 				<br>
 				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
