--- a/publications.html
+++ b/publications.html
@@ -274,7 +274,7 @@
 				<br>
 				<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
 				<br>
-				<font color="#0099ff">more details will be coming ...</font> 
+				<font color="#0099ff">more details will be coming soon ...</font> 
 				<br>
 			</p>
 		</li>
