--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 				<br>
 				<font>	arXiv:2207.01076.</font>
 				<br>
-				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code (coming soon)</font></a>
+				<a href="https://arxiv.org/abs/2207.01076" target="_blank"><font color="#0099ff">paper</font></a>
 				<br>
 			</p>
 		</li>
@@ -265,7 +265,7 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
-		
+	<!--
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				<font style="font-weight:bold">High-Fidelity Image Inpainting with GAN Inversion</font>
@@ -274,10 +274,11 @@
 				<br>
 				<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
 				<br>
-				<font color="#0099ff">more details will be coming soon ...</font> 
+				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
+	-->
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
