--- a/publications.html
+++ b/publications.html
@@ -265,6 +265,18 @@
     <!-- full conference papers -->
 	<font size="4" color="#034f84"><b>Conference Papers</b></font>
     <ul style="margin-top:5px;">
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">High-Fidelity Image Inpainting with GAN Inversion</font>
+				<br>
+				<font color="#000000" >Y. Yu, L. Zhang, H. Fan, and T. Luo</font>
+				<br>
+				<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
+				<br>
+				<font color="#0099ff">more details coming soon ...</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
@@ -272,7 +284,7 @@
 				<br>
 				<font color="#000000" >M. Guo, Z. Zhang, H. Fan, L. Jing, Y. Lyu, B. Li, and W. Hu</font>
 				<br>
-				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b>Long Oral</b>)</font>
+				<font>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022. (<b><font color="#33A2FF">Long Oral</font></b>)</font>
 				<br>
 				<a href="https://arxiv.org/abs/2201.02526" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
