--- a/prospective-students.html
+++ b/prospective-students.html
@@ -46,7 +46,10 @@
 				<br>
 			</p>
 		</li>
-    </ul>
+		</ul>
+		
+		Note: GRE could be WAIVED for excellent applicants.
+		<br><br>
 	
 	In addition to PhD students, motivated master and undergraduate students within UNT are also welcome. But note that, in general, my group does not provide financial support for master or undergraduate students. If you're interested in conducting reseach with me, please contact me.
 		
