--- a/publications.html
+++ b/publications.html
@@ -274,7 +274,7 @@
 				<br>
 				<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
 				<br>
-				<font color="#0099ff">more details coming soon</font>
+				<a href="./publication/InvertFill-ECCV-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/InvertFill-ECCV-2022-Supp.pdf" target="_blank"><font color="#0099ff">supplementary</font></a> &nbsp; <a href="https://github.com/yeates/InvertFill" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
