--- a/service.html
+++ b/service.html
@@ -148,6 +148,13 @@
 				<br>
 			</p>
 		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				International Journal of Computer Vision  (<font style="font-weight:bold">IJCV</font>)
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
