--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Fall 2021</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Fall 2022</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -70,17 +70,27 @@ div img:hover{
 			<font size="4"> Classroom: NTDP B142</font>
 		</li>
 		<li>
-			<font size="4"> Syllabus: <a href=".\Syllabus.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
+			<font size="4"> Syllabus: <a href=".\Data Structures and Algorithms-Syllabus Fall 2022.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
 		</li>
 		<br>
 		<li>
-			<font size="4"> TA: Shiva Ebrahimi (ShivaEbrahimi@my.unt.edu)</font>
+			<font size="4"> TA: Xiaoqiong Liu (xiaoqiongliu@my.unt.edu)</font>
 		</li>
 		<li>
-			<font size="4"> Office: Discovery Park F296</font>
+			<font size="4"> Office: TBD</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: Wed/Fri 2:45 - 3: 45 pm or by appointment</font>
+			<font size="4"> Office hours: TBD</font>
+		</li>
+		<br>
+		<li>
+			<font size="4"> IA: Rahul Reddy Balabhadruni (rahulbalabhadruni@my.unt.edu)</font>
+		</li>
+		<li>
+			<font size="4"> Office: TBD</font>
+		</li>
+		<li>
+			<font size="4"> Office hours: TBD</font>
 		</li>
 	</ul>
 	</p>
@@ -130,7 +140,7 @@ div img:hover{
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/24 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/30 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Introduction and course overview [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
@@ -138,12 +148,12 @@ div img:hover{
 		</tr>
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/26 </font></td>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/1 </font></td>
 			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		<tr>
+		<!-- <tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/31 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 3-Algorithm Analysis I-2.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
@@ -347,7 +357,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="red"> <b>Final Exam</b></font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-		</tr>
+		</tr> -->
 		
 	</table>
 	</p>
@@ -375,11 +385,10 @@ div img:hover{
 		<li>
 			<font size="4"> Attendance: 5%</font>
 		</li>
-		<!--
 		<li>
-			<font size="4"> Course project (bonus): 10%</font>
+			<font size="4"> Course project (optional): 5% (bonus)</font>
 		</li>
-		-->
+		
 	</ul>
 	</p>
 	
