--- a/teaching.html
+++ b/teaching.html
@@ -30,6 +30,13 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				CSCE 3110, Data Structures and Algorithms, Fall 2022 [<a href="./teaching/22F-3110/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
